--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset= "utf-8">
 <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
-<title> ferret history</title>
+<title> flowergirl </title>
 
 
 <!-- aos -->
